apply the "grid stretch hack"